--- a/force-app/main/default/lwc/barGraphSample/barGraphSample.html
+++ b/force-app/main/default/lwc/barGraphSample/barGraphSample.html
@@ -1,5 +1,5 @@
 <template>
-  <lightning-card title="東京の1週間の天気" icon-name="utility:chart">
+  <lightning-card title="月次売上" icon-name="utility:chart">
     <div class="slds-grid slds-wrap slds-grid--pull-padded">
       <div if:true={isChartJsInitialized} class="slds-col--padded slds-size--1-of-1">
         <canvas class="linechart" lwc:dom="manual"></canvas>
