--- a/force-app/main/default/lwc/barGraphSample/barGraphSample.html
+++ b/force-app/main/default/lwc/barGraphSample/barGraphSample.html
@@ -1,10 +1,16 @@
 <template>
   <lightning-card title="月次売上" icon-name="utility:chart">
     <div class="slds-grid slds-wrap slds-grid--pull-padded">
-      <div if:true={isChartJsInitialized} class="slds-col--padded slds-size--1-of-1">
-        <canvas class="linechart" lwc:dom="manual"></canvas>
+      <div
+        if:true={isChartJsInitialized}
+        class="slds-col--padded slds-size--1-of-1"
+      >
+        <canvas class="chart" lwc:dom="manual"></canvas>
       </div>
-      <div if:false={isChartJsInitialized} class="slds-col--padded slds-size--1-of-1">
+      <div
+        if:false={isChartJsInitialized}
+        class="slds-col--padded slds-size--1-of-1"
+      >
         ChartJs Not loaded yet
       </div>
     </div>
